# ckb-vm

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README_RVV.md  SECURITY.md  azure-pipelines.yml  azure-pipelines.yml.removetemporary  build.rs  codecov.yml  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: develop.yml
benches/: bits_benchmark.rs  vm_benchmark.rs
benches/data/: bn_pairing  secp256k1_bench  secp256k1_bench_old
definitions/: Cargo.toml
definitions/src/: asm.rs  generate_asm_constants.rs  instructions.rs  lib.rs  memory.rs  print_instructions.py  registers.rs
devtools/azure/: linux-dependencies.yml  osx-dependencies.yml  windows-dependencies.yml
dynasm/: README.txt
examples/: abc  abc.c  aot64.rs  asm64.rs  asm64_vtrace.rs  asm64_with_time.rs  check_real_memory.rs  ckb-vm-runner.rs  int64.rs  is13  is13.c  is13.rs  pprof.rs  pprof_cycles.rs  trace64.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: asm.rs  interpreter.rs  isa_a.rs  isa_b.rs  snapshot.rs  snapshot2.rs  syscall_exec.rs
fuzz/programs/: Makefile  exec_callee_1  exec_callee_1.c  exec_caller
fuzz_spike_ffi/: .gitignore  Cargo.toml  README.md  build.rs  build.sh
fuzz_spike_ffi/src/: lib.rs  spike-interfaces.cc  spike-interfaces.h
src/: bits.rs  cost_model.rs  debugger.rs  decoder.rs  elf.rs  error.rs  lib.rs  machine.rs  memory.rs  probe.rs  snapshot.rs  snapshot2.rs
src/context/: mod.rs
src/instructions/: a.rs  ast.rs  b.rs  c.rs  common.rs  cost_model.rs  execute.rs  i.rs  m.rs  mod.rs  register.rs  rv32i.rs  rv32m.rs  rvc.rs  tagged.rs  utils.rs  v.rs  v_alu.rs  v_execute_macros.rs  v_register.rs
src/jit/: asm.x64.c  asm.x64.compiled.c  emitter.rs  instructions.rs  machine.rs  mod.rs  tracer.rs  value.rs
src/machine/: elf_adaptor.rs  mod.rs  trace.rs
src/machine/aot/: aot.x64.c  aot.x64.compiled.c  aot.x64.win.compiled.c  emitter.rs  mod.rs
src/machine/asm/: cdefinitions_generated.h  execute.S  execute_aarch64.S  execute_x64.S  mod.rs  pprof.rs  traces.rs
src/machine/asm/v_trace/: infer.rs  mod.rs  utils.rs
src/memory/: flat.rs  mmu.rs  mod.rs  sparse.rs  wxorx.rs
src/runners/: interpreter.rs
src/syscalls/: mod.rs
tests/: machine_build.rs  machine_run.rs  test_a_extension.rs  test_aot.rs  test_asm.rs  test_asm_pprof.rs  test_auipc_fusion.rs  test_b_extension.rs  test_dy_memory.rs  test_error.rs  test_jit.rs  test_minimal.rs  test_misc.rs  test_mmu.rs  test_mop.rs  test_pc_guard.rs  test_reset.rs  test_resume.rs  test_resume2.rs  test_signal_pause.rs  test_signal_suspend.rs  test_simple.rs  test_spawn.rs  test_v_extension.rs  test_versions.rs
tests/programs/: _build_all.sh  _build_all_native.sh  _build_clang.sh  _build_clang_native.sh  alloc_many  alloc_many.c  amo_check_write  amo_check_write.S  amo_compare  amo_compare.S  amo_write_permission  amo_write_permission.S  andi  andi.c  argv_null_test  argv_null_test.c  asm_trace_bug  auipc_no_sign_extend  auipc_no_sign_extend.S  b_extension  b_extension.c  big_binary  big_binary.c  blst_rvv  cadd_hints.S  ckbforks  ckbforks.S  clang_sample  clmul_bug  clmul_bug.S  clzw_bug  clzw_bug.S  decoder_instructions_cache_pc_out_of_bound_timeout  ebreak.S  ebreak64  fib30  fib30.c  fib35.c  flat_crash_64  fsri_decode_bug  (+131 more)
tests/tests_memory/: Cargo.toml  README.md
tests/tests_memory/examples/: check_real_memory.rs
tests/tests_memory/src/: main.rs  misc.rs
tests/tests_memory/tests/: test_memory_overflow.rs
uintxx/: Cargo.toml
uintxx/src/: lib.rs
uintxx/tests/: uintxx.rs
