[package]
name = "ckb-vm"
description = "CKB's Virtual machine"
version = "0.21.3"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
rust-version = "1.61.0"
build = "build.rs"
exclude = ["/benches", "/tests"]

[features]
default = []
# Require asm feature, generates an error if asm cannot be enabled.
asm = []
# Detect if requirements are met, and enable asm feature when we can.
detect-asm = []
aot = ["asm"]
enable-chaos-mode-by-default = ["ckb-vm-definitions/enable-chaos-mode-by-default"]
# Disable slow tests to run miri on CI
miri-ci = []
pprof = []

[dependencies]
byteorder = "1"
bytes = "1"
goblin_v023 = { package = "goblin", version = "=0.2.3" }
goblin_v040 = { package = "goblin", version = "=0.4.0" }
scroll = "0.10"
serde = { version = "1.0", features = ["derive"] }
ckb-vm-definitions = { path = "definitions", version = "0.21.3" }
derive_more = "0.99.2"
rand = "0.7.3"

# Feature detection won't work here
[target.'cfg(any(windows, unix))'.dependencies]
libc = "0.2.47"
memmap = { package ="mapr", version = "0.8.0" }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3.6"
proptest = "0.9.1"

[[bench]]
name = "bits_benchmark"
path = "benches/bits_benchmark.rs"
harness = false

[[bench]]
name = "vm_benchmark"
path = "benches/vm_benchmark.rs"
harness = false
