[package]
name = "ckb-vm"
description = "CKB's Virtual machine"
version = "0.24.5"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
rust-version = "1.67.1"
build = "build.rs"
exclude = ["/benches", "/tests"]
homepage = "https://github.com/nervosnetwork/ckb-vm"
repository = "https://github.com/nervosnetwork/ckb-vm"

[features]
default = []
# Require asm feature, generates an error if asm cannot be enabled.
asm = []
# Detect if requirements are met, and enable asm feature when we can.
detect-asm = []
enable-chaos-mode-by-default = ["ckb-vm-definitions/enable-chaos-mode-by-default"]
# Disable slow tests to run miri on CI
miri-ci = []
pprof = []

[dependencies]
byteorder = "1"
bytes = "1"
goblin_v023 = { package = "goblin", version = "=0.2.3" }
goblin_v040 = { package = "goblin", version = "=0.4.0" }
scroll = "0.10"
serde = { version = "1.0", features = ["derive"] }
ckb-vm-definitions = { path = "definitions", version = "=0.24.5" }
derive_more = "0.99.2"
rand = "0.7.3"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.4.0"
proptest = "0.9.1"
lazy_static = "1.4.0"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
jemallocator = "0.5.0"
jemalloc-ctl = "0.5.0"

[[bench]]
name = "bits_benchmark"
path = "benches/bits_benchmark.rs"
harness = false

[[bench]]
name = "vm_benchmark"
path = "benches/vm_benchmark.rs"
harness = false
