[package]
name = "ckb-vm-definitions"
description = "Common definition files for CKB VM"
version = "0.20.1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
autobins = false

[features]
enable-chaos-mode-by-default = []

[[bin]]
name = "generate_asm_constants"
path = "src/generate_asm_constants.rs"
