[package]
name = "ckb-vm-definitions"
description = "Common definition files for CKB VM"
version = "0.21.3"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
rust-version = "1.61.0"
autobins = false

[features]
enable-chaos-mode-by-default = []

[[bin]]
name = "generate_asm_constants"
path = "src/generate_asm_constants.rs"
