[package]
name = "ckb-vm-definitions"
description = "Common definition files for CKB VM"
version = "0.24.9"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
rust-version = "1.71.1"
autobins = false
homepage = "https://github.com/nervosnetwork/ckb-vm"
repository = "https://github.com/nervosnetwork/ckb-vm"

[features]
enable-chaos-mode-by-default = []

[[bin]]
name = "generate_asm_constants"
path = "src/generate_asm_constants.rs"

[dependencies]
paste = "1.0"
