
[package]
name = "ckb-vm-fuzz"
version = "0.0.1"
authors = ["Nervos Core Dev <dev@nervos.org>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = { version="0.4.0", features=["arbitrary-derive"] }
bytes = "1"
ckb-vm = { path = "..", features = ["asm"] }
lazy_static = "1"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "asm"
path = "fuzz_targets/asm.rs"
test = false
doc = false

[[bin]]
name = "syscall_exec"
path = "fuzz_targets/syscall_exec.rs"
test = false
doc = false
